# ashoka

./: .env  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  arm  assets.sh  build.rs  build.sh  clean.sh  conan.sh  conanfile.txt  config.ini  config.properties  config.toml  deb.sh  env.sh  focal.sh  linaro.cmake  mingw.cmake  package-lock.json  package.json  proto.sh  staging.json  third.sh  vcpkg.sh  x64
dashboard/: .gitignore  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.tsx  Router.tsx  actions.ts  index.tsx
dashboard/src/layouts/: Copyright.tsx  form.tsx
dashboard/src/layouts/application/: index.tsx
dashboard/src/layouts/dashboard/: index.tsx
dashboard/src/locales/: en-US.ts
dashboard/src/plugins/nut/: Install.tsx  Loading.tsx  index.tsx
dashboard/src/plugins/nut/users/: SignIn.tsx  SignUp.tsx
dashboard/src/reducers/: index.ts  snack-bar.ts
dashboard/src/utils/: request.ts
db/: prepares.toml
db/schema/: up.sql
docker/: Dockerfile  README.md  alpine.Dockerfile  bionic.Dockerfile  build.sh  deb.sh  focal.Dockerfile  xenial.Dockerfile
docker/conan/profiles/: arch  bionic  linaro  mingw
docker/conan/recipes/: build.sh
docker/conan/recipes/hiredis/: conanfile.py
docker/conan/recipes/jwtpp/: conanfile.py
docker/scripts/: cross-chain.sh  deb.sh  deploy.sh  ubuntu.sh
donate/: README.md
etc/conan/: focal.sh
etc/conan/profiles/: arch  xenial-armv7hf
etc/raw/: CMakeLists.txt
etc/raw/third/: boost.cmake  hiredis.cmake  poco.cmake
examples/deploy/jobs/: ping.toml
focal/: Dockerfile  deb.sh
focal/conan/profiles/: nano-pi-dou2  nano-pi-duo2  x86_64
focal/conan/recipes/hiredis/: conanfile.py
focal/conan/recipes/jwtpp/: conanfile.py
focal/conan/recipes/libsodium/: conanfile.py
focal/conan/recipes/protobuf/: conanfile.py
jobs/: ping.json
profiles/: arm  focal-armv7hf  x64
protos/: hardware.proto  nut.proto
recpies/: hi.sh  ping.sh
src/: ancient.h  application.cc  application.h  audio.h  audio_test.cpp  banner.txt  cache.rs  cbeta.cc  cbeta.h  common.h  config.h.in  courses.h  crawler.cc  crawler.h  crawler_test.cpp  crontab.cc  crontab.h  crypt.cc  crypt.h  env.h  env.rs  errors.rs  forum.h  hardware.cc  hardware.grpc.pb.cc  hardware.grpc.pb.h  hardware.h  hardware.pb.cc  hardware.pb.h  image_magick.rs  jwt.h  lib.rs  main.cc  main.cpp  main.rs  mqtt.cc  mqtt.h  mqtt_test.cpp  nut.cc  nut.h  (+44 more)
src/app/: mod.rs
src/app/database/: generate.rs  migrate.rs  mod.rs  rollback.rs  status.rs
src/app/generate/: nginx.rs  systemd.rs
src/app/http/: routes.rs  server.rs
src/app/i18n/: en-US.ini  sync.rs
src/crypto/: mod.rs
src/dict/: stardict.rs
src/graphql/: context.rs  mod.rs  mutation.rs  query.rs
src/i18n/: locale.rs  mod.rs
src/oauth/google/: mod.rs  openid.rs
src/orm/: migration.rs  mod.rs  mysql.rs  schema.rs  up.sql
src/plugins/: mod.rs
src/plugins/cbeta/: mod.rs
src/plugins/deploy/: mod.rs  models.rs  models1.rs
src/plugins/forum/html/: mod.rs  posts.rs  topics.rs
src/plugins/nut/: html.rs  mod.rs  request.rs
src/plugins/nut/graphql/: attahments.rs  cards.rs  categories.rs  friend_links.rs  locales.rs  mod.rs  users.rs
src/plugins/nut/graphql/site/: mod.rs  status.rs
src/plugins/nut/models/: attachment.rs  card.rs  category.rs  friend_link.rs  leave_word.rs  link.rs  log.rs  policy.rs  tag.rs  user.rs  vote.rs
src/plugins/nut/tasks/: send_email.rs
src/settings/: mod.rs
src/twilio/: mod.rs  sms.rs
staging/: config.toml
tasks/: hi.sh
templates/: home.html  nginx.conf  robots.txt
templates/systemd/: service.conf
test/: CMakeLists.txt
tests/: deploy_test.rs
third/: cpprestsdk.cmake  hiredis.cmake  inja.cmake  jsoncpp.cmake  jwtpp.cmake  libpqxx.cmake  linaro.cmake  nlohmann_json.cmake  paho_mqtt.cmake  tomlplusplus.cmake
third/jwtpp/: conanfile.py
third/libsodium/: conanfile.py
ubuntu/DEBIAN/: control  postinst  postrm
xenial/: Dockerfile
